// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display custom seperator  1`] = `
<DocumentFragment>
  <nav
    aria-label="breadcrumb"
    class="css-0"
    data-chakra-component="CBox"
  >
    <ol
      class="css-0"
      data-chakra-component="CBox"
    >
      <li
        class="css-18biwo"
        data-chakra-component="CBox"
      >
        <a
          class="css-0 css-19ysyim"
          data-chakra-component="CPseudoBox"
          href="/"
        >
          Home
        </a>
        <span
          class="css-dp0f2t"
          data-chakra-component="CBox"
          role="presentation"
        >
          -
        </span>
      </li>
      <li
        class="css-18biwo"
        data-chakra-component="CBox"
      >
        <a
          class="css-0 css-19ysyim"
          data-chakra-component="CPseudoBox"
          href="/about"
        >
          About
        </a>
        <span
          class="css-dp0f2t"
          data-chakra-component="CBox"
          role="presentation"
        >
          -
        </span>
      </li>
      <li
        class="css-18biwo"
        data-chakra-component="CBox"
      >
        <span
          aria-current="page"
          class="css-0"
          data-chakra-component="CBox"
          href="/contact"
        >
          Contact
        </span>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div>
    <nav
      aria-label="breadcrumb"
      class="css-0"
      data-chakra-component="CBox"
    >
      <ol
        class="css-0"
        data-chakra-component="CBox"
      >
        <li
          class="css-18biwo"
          data-chakra-component="CBox"
        >
          <a
            class="css-0 css-19ysyim"
            data-chakra-component="CPseudoBox"
            href="#"
          >
            Breadcrumb 1
          </a>
          <span
            class="css-6eovvf"
            data-chakra-component="CBox"
            role="presentation"
          >
            /
          </span>
        </li>
        <li
          class="css-18biwo"
          data-chakra-component="CBox"
        >
          <a
            class="css-0 css-19ysyim"
            data-chakra-component="CPseudoBox"
            href="#"
          >
            Breadcrumb 2
          </a>
          <span
            class="css-1hgjpgb"
            data-chakra-component="CBox"
            role="presentation"
          >
            /
          </span>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;
